# GLSA-OVAL

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: action.yml
glsa_parser/: __init__.py  glsa_to_oval.py
